--- a/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/_Layout.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - EFGetStarted.AspNetCore.ExistingDb</title>
+    <title>@ViewData["Title"] - Mill Data</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -28,11 +28,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">EFGetStarted.AspNetCore.ExistingDb</a>
+                <a asp-area="" asp-controller="MillInformations" asp-action="Index" class="navbar-brand">NCASI Mill Data</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="MillInformations" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
@@ -43,7 +43,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - EFGetStarted.AspNetCore.ExistingDb</p>
+            <p>&copy; 2017 - NCASI, Inc.</p>
         </footer>
     </div>
 
