--- a/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
@@ -42,9 +42,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Latitude)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Longitude)
-            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Naprodcat)
             </th>
@@ -116,20 +114,32 @@
             </tr>
 </thead>
     <tbody>
-@foreach (var item in Model.Take(10)) {
-        <tr  onclick="location.href = '@(Url.Action("Details", "MillInformations", new { id = item.PkMillKey }))'"> 
-            <td>
+@foreach (var item in Model.Take(10))
+{
+        <tr> 
+            <td onclick="location.href = '@(Url.Action("Details", "MillInformations", new { id = item.PkMillKey }))'">
                 @Html.DisplayFor(modelItem => item.MillId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Company)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Latitude)
+            <td >
+                @{ 
+                    string latval = item.Latitude;
+                    latval = latval.Trim('"');
+                    string longval = item.Longitude;
+                    longval = longval.Trim('"');
+                    latval = latval.Replace("\"\"", "\"");
+                    longval = longval.Replace("\"\"", "\"");
+                    string coordinate = latval + ", " + longval;
+                }
+                <a href="https://www.google.com/maps/place/@coordinate" target="_blank">
+                    @Html.DisplayFor(modelItem => coordinate)
+                </a>
+
+
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Longitude)
-            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Naprodcat)
             </td>
@@ -179,10 +189,22 @@
                 @Html.DisplayFor(modelItem => item.Eparegion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Website)
+                @{
+                    string website = item.Website;
+                    if (String.Compare(website, "http://") == 0 || String.Compare(website, "http://") == 0)
+                    { website = ""; }
+                }
+                <a href="@website" target="_blank">
+                    @Html.DisplayFor(modelItem => website)
+                </a>
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Comments)
+                @{ 
+                    string comstr = item.Comments;
+                    if (String.Compare(comstr, "NULL") == 0)
+                        { comstr = ""; }
+                }
+                @Html.DisplayFor(modelItem => comstr)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.MillStatus)
