--- a/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Delete.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Delete.cshtml
@@ -1,4 +1,4 @@
-@model EFGetStarted.AspNetCore.ExistingDb.Models.MillInformation
+@model MillData.Models.MillInformation
 
 @{
     ViewData["Title"] = "Delete";
