--- a/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<EFGetStarted.AspNetCore.ExistingDb.Models.MillInformation>
+@model IEnumerable<MillData.Models.MillInformation>
 
 @{
     ViewData["Title"] = "Index";
