--- a/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/Layout.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - EFGetStarted.AspNetCore.ExistingDb</title>
+    <title>@ViewData["Title"] - MillData</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">EFGetStarted.AspNetCore.ExistingDb</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">MillData</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -42,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - EFGetStarted.AspNetCore.ExistingDb</p>
+            <p>&copy; 2016 - MillData</p>
         </footer>
     </div>
 
