building search action

--- a/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
@@ -28,8 +28,9 @@
 </style>
 
 <h2>Mill Information</h2>
-<form>
+<form action="~/Models/MillSearchModel" method="post">
     Search Mill ID: <input type="Text" />
+    <input type="submit"/>
 </form>
 <br />
 
