Order by working

--- a/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
@@ -28,7 +28,7 @@
 </style>
 
 <h2>Mill Information</h2>
-<form action="~/Models/MillSearchModel" method="post">
+<form action="~/Models/MillSearchModel/getID" method="post">
     Search Mill ID: <input type="Text" />
     <input type="submit"/>
 </form>
