--- a/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
@@ -127,7 +127,7 @@
             </tr>
 </thead>
     <tbody>
-@foreach (var item in Model.Take(100))
+@foreach (var item in Model)
 {
         <tr> 
             <td class="clickable" onclick="location.href = '@(Url.Action("Details", "MillInformations", new { id = item.PkMillKey }))'">
