--- a/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/MillInformations/Index.cshtml
@@ -31,8 +31,21 @@
 @using (Html.BeginForm())
 {
     <p>
-        Search Mill ID: @Html.TextBox("IDSearchString")
+        Search Mill ID:<span id="searchbox"> @Html.TextBox("IDSearchString")</span>
         <input type="submit" value="Search" />
+        <script>
+            var searchterm = document.getElementById("searchbox").lastChild.attributes[3].value;
+            if (searchterm != "")
+            {
+                if (isNaN(searchterm))
+                {
+                    alert("Error: Please enter a numerical Mill ID.");
+                }
+                console.log(searchterm, isNaN(searchterm));
+            }
+
+
+        </script>
     </p>
 }
 
