--- a/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/Layout.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/Layout.cshtml
@@ -39,9 +39,13 @@
         </div>
     </div>
     <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
+       
+            @RenderBody()
+
+        
+        <hr class="footerline" />
+        <footer class="footer">
+       
             <p>&copy; 2016 - MillData</p>
         </footer>
     </div>
