--- a/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/_Layout.cshtml
+++ b/EFGetStarted.AspNetCore.ExistingDb/Views/Shared/_Layout.cshtml
@@ -41,8 +41,8 @@
     </nav>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
+        <hr class="footerline"/>
+        <footer class="footer">
             <p>&copy; 2017 - NCASI, Inc.</p>
         </footer>
     </div>
